--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@react-native-firebase/app": "^17.0.0",
     "@react-native-firebase/crashlytics": "^17.0.0",
+    "@react-native-firebase/firestore": "^17.0.0",
     "@react-native-firebase/perf": "^17.0.0",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "expo": "~47.0.12",
     "expo-build-properties": "~0.4.1",
     "expo-dev-client": "~2.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
@@ -24,8 +26,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
